--- a/assets/assets_lsp/css/child/print.css
+++ b/assets/assets_lsp/css/child/print.css
@@ -41,10 +41,21 @@
 .print-content .print-header i {
   font-size: 22rem;
   color: #fff;
-  margin-bottom: -30px;
 }
 .print-content .print-footer h1 {
   font-size: 1.5rem;
   color: #333;
   text-decoration: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .print {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 40px;
+  }
+  .print-content {
+    width: 100%;
+  }
 }
