--- a/assets/assets_lsp/css/global.css
+++ b/assets/assets_lsp/css/global.css
@@ -7,9 +7,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #e9ecef;
-}
 .flex {
   display: flex;
   align-items: center;
@@ -25,6 +22,7 @@ body {
   width: 50px;
   aspect-ratio: 1/1;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .nav_image i {
@@ -264,7 +262,7 @@ body {
   margin-left: 10px;
 }
 .nav-text .name-bold {
-  font-size: 16px;
+  font-size: 14px;
   color: #333;
   font-weight: 500;
 }
@@ -272,6 +270,7 @@ body {
   margin-top: -10px;
   font-size: 12px;
   color: #aaa;
+  font-weight: 500;
 }
 
 .main-wrapper {
@@ -482,7 +481,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  padding-left: 30px;
+  padding-left: 30pxz;
 }
 /* Responsive */
 
