--- a/assets/assets_lsp/css/child/asesiDashboard.css
+++ b/assets/assets_lsp/css/child/asesiDashboard.css
@@ -132,10 +132,40 @@ h4 {
 }
 
 @media screen and (max-width: 1100px) {
-  .online-chat {
-    display: none;
+  .chat-wrapper {
+    flex-direction: column;
+    gap: 20px;
   }
   .chat-box-left {
     width: 100%;
+    height: 300px;
+  }
+  .online-chat {
+    width: 100%;
+    height: 300px;
+  }
+  .content-biodata-wrapper {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .content-biodata-wrapper {
+    padding: 0 0 0 20px;
+  }
+  .dashboard-asesi-resp {
+    padding: 0 0 0 20px;
+  }
+  .print-wrapper {
+    padding: 0 0 0 20px;
+  }
+  .progress-form-2-apl-wrap {
+    padding: 0 0 0 20px;
+  }
+  .chat-wrapper {
+    padding: 0 10px 0 20px;
+    flex-direction: column;
+  }
+  .main-column {
+    padding: 0px;
   }
 }
