--- a/assets/assets_lsp/css/global.css
+++ b/assets/assets_lsp/css/global.css
@@ -7,6 +7,14 @@
   box-sizing: border-box;
 }
 
+html,
+body,
+#app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .flex {
   display: flex;
   align-items: center;
@@ -275,7 +283,7 @@
 
 .main-wrapper {
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   margin-top: -20px;
 }
 .main {
@@ -322,7 +330,7 @@
 
 .content-wrapper-all {
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   margin-top: 270px;
 }
 
@@ -477,11 +485,15 @@
 }
 
 .main-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding-left: 30pxz;
+  background-color: #fff;
+  border-top: 1px solid #aaa;
+  width: 100%;
+  padding: 0px !important;
+  display: flex;
+  justify-content: center;
+}
+.footer-left {
+  padding: 30px !important;
 }
 /* Responsive */
 
@@ -523,6 +535,12 @@
     position: absolute;
     right: 30px;
   }
+  .nav_image img {
+    width: 30px;
+  }
+  .nav_image .nav-text {
+    display: none;
+  }
   .chart-wrapper {
     flex-direction: column;
     margin-top: -10px !important;
@@ -544,5 +562,9 @@
   .main {
     width: 100%;
     left: 0;
+  }
+
+  .welcome-tab {
+    bottom: -30px !important;
   }
 }
