--- a/assets/assets_lsp/css/child/login.css
+++ b/assets/assets_lsp/css/child/login.css
@@ -22,6 +22,12 @@ body {
   display: flex;
 }
 
+@media screen and (max-width: 768px) {
+  .login-container {
+    padding: 0 50px;
+  }
+}
+
 .left-main,
 .right-main {
   width: 50%;
